--- a/src/components/Registration/Registration.scss
+++ b/src/components/Registration/Registration.scss
@@ -4,13 +4,15 @@
 }
 
 .auth-wrap {
+  margin: 3em 0 0 0;
   display: flex;
   justify-content: space-around;
 }
 
 .auth {
-  width: 10%;
+  width: 50%;
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
   flex-wrap: wrap;
   margin-top: 0.5rem;
@@ -20,6 +22,13 @@
   margin: 0.5em;
   text-align: center;
   font-size: 1.3em;
+}
+
+.auth i {
+  font-style: italic;
+  color: #38ad2e;
+  font-weight: 500;
+  margin: 0.5em 0;
 }
 
 .auth select {
@@ -39,7 +48,7 @@
 }
 
 .auth button {
-  width: 20rem;
+  width: 100%;
   display: inline-block;
   font: inherit;
   background: none;
@@ -47,7 +56,7 @@
   padding: 0;
   cursor: pointer;
   font-size: 1.4rem;
-  font-weight: 600;
+  font-weight: 500;
   line-height: 1.8;
   border: 0.1rem solid #dbdbdb;
   border-radius: 0.3rem;
