--- a/src/components/Change/Change.scss
+++ b/src/components/Change/Change.scss
@@ -1,37 +1,27 @@
-.editing-h1 {
+.auth-h1 {
   text-align: center;
   font-size: 1.7em;
 }
 
-.editing-wrap {
-  margin: 3em 0 0 0;
+.auth-wrap {
   display: flex;
   justify-content: space-around;
 }
 
-.editing {
-  width: 80%;
+.auth {
+  width: 10%;
   display: flex;
-  flex-direction: column;
   justify-content: space-around;
   flex-wrap: wrap;
   margin-top: 0.5rem;
 }
 
-.editing h3 {
-  margin: 0.5em;
+.auth h3 {
   text-align: center;
   font-size: 1.3em;
 }
 
-.editing i {
-  font-style: italic;
-  color: #38ad2e;
-  font-weight: 500;
-  margin: 0.5em 0;
-}
-
-.editing select {
+.auth input {
   min-width: 20rem;
   height: 3rem;
   border: 0.1rem solid #dbdbdb;
@@ -39,24 +29,16 @@
   margin: 0.2rem;
 }
 
-.editing input {
-  min-width: 20rem;
-  height: 3rem;
-  border: 0.1rem solid #dbdbdb;
-  border-radius: 0.3rem;
-  margin: 0.2rem;
-}
-
-.editing-btn {
-  width: 100%;
-  //display: block;
+.auth button {
+  width: 20rem;
+  display: inline-block;
   font: inherit;
   background: none;
   color: inherit;
   padding: 0;
   cursor: pointer;
   font-size: 1.4rem;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 1.8;
   border: 0.1rem solid #dbdbdb;
   border-radius: 0.3rem;
