--- a/src/components/Registration/Registration.scss
+++ b/src/components/Registration/Registration.scss
@@ -1,15 +1,15 @@
-.auth-h1 {
+.reg-h1 {
   text-align: center;
   font-size: 1.7em;
 }
 
-.auth-wrap {
+.reg-wrap {
   margin: 3em 0 0 0;
   display: flex;
   justify-content: space-around;
 }
 
-.auth {
+.reg {
   width: 50%;
   display: flex;
   flex-direction: column;
@@ -18,36 +18,57 @@
   margin-top: 0.5rem;
 }
 
-.auth h3 {
+.reg h3 {
   margin: 0.5em;
   text-align: center;
   font-size: 1.3em;
 }
+.reg span {
+  margin: 0 0 0.5em 0;
+  cursor: default;
+}
 
-.auth i {
+.reg span i {
+  display: inline-block;
+  min-width: 3em;
+  font-size: 0.7em;
+  border: 0.02em solid #38ad2e;
+  padding: 0.3em 1em;
+}
+/* .reg span:hover {
+  cursor: pointer;
+} */
+
+.reg i {
   font-style: italic;
   color: #38ad2e;
   font-weight: 500;
   margin: 0.5em 0;
 }
 
-.auth select {
+.reg select {
   min-width: 20rem;
   height: 3rem;
   border: 0.1rem solid #dbdbdb;
   border-radius: 0.3rem;
   margin: 0.2rem;
 }
+.reg-class-teacher-list:hover {
+  cursor: pointer;
+}
+.reg-class-user:hover {
+  cursor: pointer;
+}
 
-.auth input {
-  min-width: 20rem;
+.reg input {
+  width: 100%;
   height: 3rem;
   border: 0.1rem solid #dbdbdb;
   border-radius: 0.3rem;
   margin: 0.2rem;
 }
 
-.auth button {
+.reg button {
   width: 100%;
   display: inline-block;
   font: inherit;
