--- a/src/components/Subject/Subject.scss
+++ b/src/components/Subject/Subject.scss
@@ -1,49 +1,16 @@
-.card-wraper {
-  background-color: #f2feff;
-  width: 80%;
-  margin: 0 0 0 10%;
-}
-.card-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 0.1em 0;
-  margin: 0.2em 0;
-  min-height: 3em;
-  background-color: #dbf6f8;
-  cursor: pointer;
-}
-.card-header p:hover {
-  font-weight: 600;
-}
-.card-body p {
-  display: block;
-}
-.card-body ol {
-  list-style-type: decimal;
-  font-size: 1.5em;
-  margin-left: 1.5em;
-}
-.card-body ul {
-  font-size: 1em;
-  margin-left: 5em;
+p {
+  font-size: 2em;
+  font-weight: 400;
 }
 
-.card-body button {
-  width: 40%;
-  color: #31b2e8;
-  display: inline-block;
-  text-align: center;
-  min-height: 90%;
-  font-size: 1.4rem;
-  background-color: #fff;
-  line-height: 1;
-  border: 0.1rem solid #dbdbdb;
-  border-radius: 0.3rem;
-  padding: 0 2.4rem;
-  margin-left: 1rem;
+p:hover {
   cursor: pointer;
+  font-weight: 600;
 }
-.card-body button:hover {
-  background-color: #fafafa;
+
+.subject-list-item {
+  font-style: normal;
+  list-style: circle;
+  list-style-position: inside;
+  font-weight: 600;
 }
