--- a/src/components/OfficeSideBar/OfficeSideBar.scss
+++ b/src/components/OfficeSideBar/OfficeSideBar.scss
@@ -8,12 +8,49 @@
     width: 12em;
   }
 }
+
+@keyframes rotation-logo {
+  25% {
+    transform: rotate(-120deg) scale(1.27);
+    animation-timing-function: ease-in;
+  }
+  50% {
+    transform: rotate(210deg) scale(0.7);
+    animation-timing-function: ease-in;
+  }
+  75% {
+    transform: rotate(-150deg) scale(1.3);
+    animation-timing-function: ease-in-out;
+  }
+  100% {
+    transform: rotate(0deg) scale(1);
+    animation-timing-function: cubic-bezier(0.1, 0.7, 1, 0.1);
+  }
+}
+@keyframes pulse-logo {
+  25% {
+    transform: scale(1.27);
+    animation-timing-function: ease-in;
+  }
+  50% {
+    transform: scale(0.55);
+    animation-timing-function: ease-out;
+  }
+  75% {
+    transform: scale(1.25);
+    animation-timing-function: ease-in-out;
+  }
+  100% {
+    transform: rotate(0deg);
+    animation-timing-function: cubic-bezier(0.1, 0.7, 1, 0.1);
+  }
+}
 .side-nav-bar {
   position: fixed;
   top: 0;
-  width: 10em;
+  width: 11em;
   height: 100%;
-  background-color: aliceblue;
+  background-color: rgb(250, 253, 255);
   box-shadow: 5px 0px 9px 5px rgba(0, 0, 0, 0.13);
   -webkit-box-shadow: 5px 0px 9px 5px rgba(0, 0, 0, 0.13);
   -moz-box-shadow: 5px 0px 9px 5px rgba(0, 0, 0, 0.13);
@@ -25,20 +62,22 @@
   flex-direction: column;
   list-style: none;
   padding: 0;
-  margin-top: 1em;
+  margin: 1em 0 0 0.5em;
 }
 .side-nav-bar ul li {
   display: block;
   text-align: center;
-  width: 9em;
+  width: 9.5em;
   min-height: 100%;
   padding: 1.5em 0;
-  font-size: 1.2em;
+  font-size: 1.3em;
+  color: rgb(255, 255, 255);
+  font-weight: 700;
 }
 
 .side-btn- {
   margin-top: 0.3em;
-  background-color: rgb(221, 239, 255);
+  background-color: #00a558;
   box-shadow: 1px 0px 0px 1px rgba(0, 0, 0, 0.09);
   -webkit-box-shadow: 1px 0px 0px 1px rgba(0, 0, 0, 0.09);
   -moz-box-shadow: 1px 0px 0px 1px rgba(0, 0, 0, 0.09);
@@ -46,20 +85,34 @@
 .side-btn-:hover {
   animation: width-move 300ms;
   width: 12em;
-  background-color: #89d9fb;
+  background-color: #03c86c;
   cursor: pointer;
 }
 
 .side-btn-active {
-  background-color: #56b4dd;
+  background-color: #007a41;
+  margin-top: 0.2em;
+  max-width: 8.2em;
 }
-.side-btn:focus {
-  background-color: #70d1fa;
+
+.logo {
+  margin-top: 3.5em;
 }
 
 .logo img {
+  position: absolute;
+  top: 1em;
+  left: 1em;
+  animation: pulse-logo 2000ms;
+  animation-iteration-count: infinite;
   width: 5em;
   height: 4.6em;
+  margin: 0.5em 0 1em 1em;
+}
+.logo img:hover {
+  animation: rotation-logo 3500ms;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
 }
 
 @media screen and (max-width: 420px) {
