--- a/src/components/FindUser/FindUser.scss
+++ b/src/components/FindUser/FindUser.scss
@@ -10,7 +10,7 @@
   margin: 0.2rem;
 }
 .users-wrap button {
-  width: 20%;
+  min-width: 25%;
   height: 2.1em;
   font: inherit;
   background: none;
@@ -24,6 +24,9 @@
   border-radius: 0.3rem;
   padding: 0 2.4rem;
   margin: 0.2rem 0 0 0.15rem;
+}
+.users-wrap select {
+  min-width: 50%;
 }
 .users-wrap h3 {
   font-weight: 400;
