--- a/src/components/Auth/Auth.scss
+++ b/src/components/Auth/Auth.scss
@@ -16,6 +16,32 @@
   margin-top: 0.5rem;
 }
 
+.auth-toggle {
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 2em;
+}
+
+.auth-toggle-h {
+  margin: 0 1em 0 1em;
+  color: rgb(31, 202, 74);
+  font-size: 1.5em;
+  font-weight: 500;
+}
+.auth-toggle-h:hover {
+  cursor: pointer;
+  font-weight: 700;
+}
+
+.auth-toggle-h-active {
+  cursor: pointer;
+  margin: 0 1em 0 1em;
+  color: rgb(31, 202, 74);
+  font-size: 1.5em;
+  font-weight: 700;
+  //border-bottom: 0.1em solid rgb(31, 202, 74);
+}
+
 .auth h3 {
   text-align: center;
   font-size: 1.3em;
