--- a/src/components/MainMenu/MainMenu.scss
+++ b/src/components/MainMenu/MainMenu.scss
@@ -1,9 +1,9 @@
-.auth-menu-wrap {
+.main-menu-wrap {
   font-family: 'Montserrat', sans-serif;
   display: flex;
   justify-content: space-around;
 }
-.auth-menu {
+.main-menu {
   display: flex;
   width: 100%;
   justify-content: center;
@@ -11,16 +11,16 @@
   list-style: none;
   padding: 0;
 }
-.auth-menu li {
+.main-menu li {
   display: inline-block;
   min-height: 100%;
   margin: 0 2em 0 0;
 }
-.auth-menu li a {
+.main-menu li a {
   text-decoration: none;
   color: #31b2e8;
 }
 
-.auth-menu li a p {
+.main-menu li a p {
   font-size: 1em;
 }
