--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -46,6 +46,12 @@ body h1 {
   font-weight: 900;
   margin: 0.4em 0;
 }
+.intro-h1 {
+  display: flex;
+  justify-content: center;
+  margin-top: 20%;
+}
+
 body h2 {
   font-size: 2.8em;
   font-weight: 700;
