--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -1,5 +1,27 @@
 :root {
-  font-size: 10px;
+  font-size: 8px;
+  --blue: #007bff;
+  --sky: #38b3fa;
+  --indigo: #6610f2;
+  --purple: #6f42c1;
+  --pink: #e83e8c;
+  --red: #dc3545;
+  --orange: #fd7e14;
+  --yellow: #ffc107;
+  --green: #28a745;
+  --teal: #20c997;
+  --cyan: #17a2b8;
+  --white: #fff;
+  --gray: #868e96;
+  --gray-dark: #333;
+  --primary: #333;
+  --secondary: #555;
+  --success: #28a745;
+  --info: #17a2b8;
+  --warning: #ffc107;
+  --danger: #dc3545;
+  --light: #fff;
+  --dark: #555;
 }
 
 *,
